--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-  <title>App</title>
+      content="width=device-width, initial-scale=1.0, maximum-scale=1"
+    />
+    <title>App</title>
     <!-- Add Google Fonts here, example:
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,38 +28,43 @@
           const ANALYTICS_WEBSITE_ID = "%VITE_ANALYTICS_WEBSITE_ID%";
 
           // Helper to detect unreplaced %VITE_*% tokens (Vite leaves the literal when unset)
-          const isUnreplaced = (v) => typeof v === 'string' && v.indexOf('%VITE_') === 0;
+          const isUnreplaced = v =>
+            typeof v === "string" && v.indexOf("%VITE_") === 0;
 
           if (!isUnreplaced(APP_TITLE) && APP_TITLE) {
             document.title = APP_TITLE;
           }
 
           if (!isUnreplaced(APP_LOGO) && APP_LOGO) {
-            const link = document.createElement('link');
-            link.rel = 'icon';
-            link.type = 'image/png';
+            const link = document.createElement("link");
+            link.rel = "icon";
+            link.type = "image/png";
             link.href = APP_LOGO;
             document.head.appendChild(link);
 
-            const touch = document.createElement('link');
-            touch.rel = 'apple-touch-icon';
+            const touch = document.createElement("link");
+            touch.rel = "apple-touch-icon";
             touch.href = APP_LOGO;
             document.head.appendChild(touch);
           }
 
-          if (!isUnreplaced(ANALYTICS_ENDPOINT) && ANALYTICS_ENDPOINT && !isUnreplaced(ANALYTICS_WEBSITE_ID) && ANALYTICS_WEBSITE_ID) {
-            const s = document.createElement('script');
+          if (
+            !isUnreplaced(ANALYTICS_ENDPOINT) &&
+            ANALYTICS_ENDPOINT &&
+            !isUnreplaced(ANALYTICS_WEBSITE_ID) &&
+            ANALYTICS_WEBSITE_ID
+          ) {
+            const s = document.createElement("script");
             s.defer = true;
-            s.src = ANALYTICS_ENDPOINT.replace(/\/$/, '') + '/umami';
-            s.setAttribute('data-website-id', ANALYTICS_WEBSITE_ID);
+            s.src = ANALYTICS_ENDPOINT.replace(/\/$/, "") + "/umami";
+            s.setAttribute("data-website-id", ANALYTICS_WEBSITE_ID);
             document.body.appendChild(s);
           }
         } catch (e) {
           // swallow any errors here to avoid breaking the app
-          console.warn('Runtime asset injection failed', e);
+          console.warn("Runtime asset injection failed", e);
         }
       })();
     </script>
   </body>
-
 </html>
